--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,10 @@
   --foreground: #171717;
 }
 
+* {
+  max-width: 100%;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -21,10 +25,11 @@
   }
 }
 
-body {
+html, body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 @keyframes slide {
